Fix timeline page realignment

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -664,13 +664,14 @@ Timeline && Contact Us Page Styling
   margin-bottom: -120px;
 }
 
+.profile-pic-area {
+  text-align: center;
+}
+
 .profile-img {
-  /*position: absolute;
-    top: -113px;
-    margin-bottom: 113px;*/
   border-radius: 50%;
   max-width: 230px;
-  height: 230px;
+  width: 100%;
 }
 
 .profile-main {
@@ -809,6 +810,10 @@ Timeline && Contact Us Page Styling
   height: 40px;
   margin-right: 10px;
   border: 0.5px solid var(--blog-author-avatar-border-color);
+
+  /* layer the image on top the blog post */
+  position: relative;
+  z-index: 2;
 }
 
 .blog-item-content {
